--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#3A3A3A"
+    android:orientation="vertical"
     android:padding="16dp">
 
     <ImageView
         android:id="@+id/logoImageView"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_gravity="center"
         android:layout_marginBottom="24dp"
         android:contentDescription="@string/app_logo"
         android:src="@drawable/logo_projectpulse" />
@@ -20,41 +18,30 @@
         android:id="@+id/usernameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/logoImageView"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
-        android:background="@drawable/edittext_background"
         android:hint="@string/username_hint"
         android:inputType="text"
         android:padding="12dp"
         android:textColor="#000000"
-        android:textColorHint="#9e9e9e"
-        tools:ignore="Autofill,TextContrastCheck" />
+        android:textColorHint="#9e9e9e" />
 
     <EditText
         android:id="@+id/passwordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/usernameEditText"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:background="@drawable/edittext_background"
         android:hint="@string/password_hint"
         android:inputType="textPassword"
         android:padding="12dp"
         android:textColor="#000000"
-        android:textColorHint="#757575"
-        android:autofillHints="" />
+        android:textColorHint="#9e9e9e" />
 
     <Button
         android:id="@+id/loginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/passwordEditText"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
-        android:background="@drawable/button_background"
-        android:text="@string/login_button"
+        android:text="Login"
         android:textColor="#ffffff" />
 
-</RelativeLayout>
+</LinearLayout>
