--- a/app/src/main/res/layout/activity_project_list.xml
+++ b/app/src/main/res/layout/activity_project_list.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <!-- Botão para adicionar um novo projeto -->
+
     <Button
         android:id="@+id/addProjectButton"
         android:layout_width="wrap_content"
@@ -12,9 +13,20 @@
         android:text="@string/add_project"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="16dp"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        tools:ignore="RelativeOverlap" />
 
-    <!-- Título da tela -->
+    <Button
+        android:id="@+id/deleteProjectButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Excluir Projeto"
+        android:layout_below="@id/projectListView"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="16dp"
+        tools:ignore="HardcodedText" />
+
+
     <TextView
         android:id="@+id/projectListTitle"
         android:layout_width="wrap_content"
@@ -25,7 +37,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignBaseline="@+id/addProjectButton" />
 
-    <!-- Lista de projetos -->
+
     <ListView
         android:id="@+id/projectListView"
         android:layout_width="match_parent"
@@ -33,15 +45,6 @@
         android:layout_below="@id/addProjectButton"
         android:layout_marginTop="16dp" />
 
-    <!-- Botão para excluir um projeto -->
-    <Button
-        android:id="@+id/deleteProjectButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Excluir Projeto"
-        android:layout_below="@id/projectListView"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="16dp"
-        android:visibility="gone" /> <!-- Inicialmente invisível, será mostrado conforme necessário -->
+
 
 </RelativeLayout>
